# dartt-dashboard

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
.github/: dartt-dashboard.desktop
.github/workflows/: release.yml
docs/: usage.md
example/: example.json  example_dartt.c  example_dartt.h
src/: buffer_sync.cpp  buffer_sync.h  config.cpp  config.h  dartt_init.cpp  dartt_init.h  elf_parser.cpp  elf_parser.h  main.cpp  plotting.cpp  plotting.h  ui.cpp  ui.h  usage.md
src/audio/: audio_engine.cpp  audio_engine.h
src/reader/: CMakeLists.txt  dartt_link.cpp  dartt_link.h  dartt_reader.cpp  dartt_reader.h
todo/: async-read-thread.md
